examples/gateway-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: mikrotik
spec:
  controllerName: mikrotik.operator.io/controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mikrotik
  namespace: e2e-test
spec:
  gatewayClassName: mikrotik
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web
  namespace: e2e-test
spec:
  parentRefs:
  - name: mikrotik
  hostnames:
  - web-gateway.e2e.home.arpa
  rules:
  - backendRefs:
    - name: web
      port: 80
